Fix alignment of text in selector

--- a/src/Selector.css
+++ b/src/Selector.css
@@ -22,6 +22,7 @@
 	display: flex;
 	flex-direction: column;
 	justify-content: center;
+	align-items: center;
 	row-gap: 1rem;
 	height: 180px;
 	padding: 1rem 0;
